--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
   <title></title>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Zilla+Slab:ital@0;1&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./style.css">
+  <script src="./data.js"></script>
   <script src="./script.js"></script>
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Title</h1>
-      <nav></nav>
+      <h1>Frans' modulaire spelsysteem</h1>
     </header>
     <article>
-      <header>
-          <hgroup>
-              <h1>Hoofdkop</h1>
-              <h4>subkop</h4>
-          </hgroup>
-      </header>
-      <section>
-        <h1>Paragraaftitel</h1>
-        <p>tekst</p>
-      </section>
+      <h3 id="cont_head"></h3>
+      <section id="cont_text">Hoi!</section>
+      <nav id="cont_nav"></nav>
+      <section id="cont_hint"></section>
     </article>
-    <footer>
-      <progress value="0" max="100"></progress>
-    </footer>
+    <article>
+      <h3 id="log_head">Log</h3>
+      <section id="log_text"></section>
+    </article>
   </div>
 </body>
 </html>
