--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
       <h1>Frans' modulaire spelsysteem</h1>
     </header>
     <article>
-      <h3 id="cont_head"></h3>
+      <h2 id="cont_head"></h2>
       <section id="cont_text">Hoi!</section>
       <nav id="cont_nav"></nav>
       <section id="cont_hint"></section>
     </article>
     <article>
-      <h3 id="log_head">Log</h3>
+      <h2 id="log_head">Log</h2>
       <section id="log_text"></section>
+      <div class="button" onclick="addLog('Log!')">Log?</div>
     </article>
   </div>
 </body>
