--- a/index.html
+++ b/index.html
@@ -10,16 +10,13 @@
 </head>
 <body>
   <div class="container">
-    <header>
-      <h1>Frans' modulaire spelsysteem</h1>
-    </header>
-    <article>
+    <article id = art_cont>
       <h2 id="cont_head"></h2>
       <section id="cont_text">Hoi!</section>
       <nav id="cont_nav"></nav>
       <section id="cont_hint"></section>
     </article>
-    <article>
+    <article id = "art_log">
       <h2 id="log_head">Log</h2>
       <section id="log_text"></section>
       <div class="button" onclick="addLog('Log!')">Log?</div>
