--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
 </head>
 <body>
   <div class="container">
-    <article id = art_cont>
+    <article id = "art_cont" class="w100">
       <h2 id="cont_head"></h2>
       <section id="cont_text">Hoi!</section>
       <nav id="cont_nav"></nav>
       <section id="cont_hint"></section>
     </article>
-    <article id = "art_log">
+    <article id = "art_inv" class="w50">
+      <h2 id="inv_head">Inventory</h2>
+      <section id="inv_text"></section>
+    </article>
+    <article id = "art_log" class="w50">
       <h2 id="log_head">Log</h2>
       <section id="log_text"></section>
-      <div class="button" onclick="addLog('Log!')">Log?</div>
     </article>
   </div>
 </body>
