--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Zilla+Slab:ital@0;1&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Zilla+Slab:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./style.css">
   <script src="./data.js"></script>
   <script src="./script.js"></script>
@@ -12,7 +12,7 @@
   <div class="container">
     <article id = "art_cont" class="w100">
       <h2 id="cont_head"></h2>
-      <section id="cont_text">Hoi!</section>
+      <section id="cont_text" class="sentence"></section>
       <nav id="cont_nav"></nav>
       <section id="cont_hint"></section>
     </article>
