--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body>
   <div class="container">
     <article id = "art_cont" class="w100">
-      <h2 id="cont_head" class="sentence"></h2>
-      <section id="cont_text" class="sentence"></section>
+      <h2 id="cont_head"></h2>
+      <section id="cont_text"></section>
       <nav id="cont_nav"></nav>
       <section id="cont_hint"></section>
     </article>
     <article id = "art_inv" class="w50">
-      <h2 id="inv_head" class="sentence"><span>Inventory</span></h2>
+      <h2 id="inv_head"><span>Inventory</span></h2>
       <section id="inv_text"></section>
     </article>
     <article id = "art_log" class="w50">
-      <h2 id="log_head" class="sentence"><span>Log</span></h2>
+      <h2 id="log_head"><span>Log</span></h2>
       <section id="log_text"></section>
     </article>
   </div>
